grammar/.antlr/AUTOMAParser.java
// Generated from /Users/liyuzerihun/Automa/grammar/AUTOMAParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AUTOMAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Operator=1, Transitions=2, Graph=3, Memory=4, AfterReject=5, AfterAccept=6, 
		Symbols=7, Array=8, Dict=9, Tuple=10, Conditions=11, Operations=12, None=13, 
		NodeDef=14, StartNode=15, AcceptNode=16, RejectNode=17, Arrow=18, ArrowEquals=19, 
		LeftParen=20, RightParen=21, LeftBracket=22, RightBracket=23, LeftBrace=24, 
		RightBrace=25, Plus=26, Minus=27, Star=28, Div=29, Mod=30, And=31, Or=32, 
		Tilde=33, Not=34, Assign=35, Less=36, Greater=37, Equal=38, NotEqual=39, 
		LessEqual=40, GreaterEqual=41, Semicolon=42, DoubleColon=43, Colon=44, 
		Comma=45, BooleanLiteral=46, StringLiteral=47, CharLiteral=48, IntegerLiteral=49, 
		Digit=50, IDENTIFIER=51, Whitespace=52, Newline=53, BlockComment=54, LineComment=55;
	public static final int
		RULE_r = 0, RULE_graphDef = 1, RULE_graphBody = 2, RULE_memoryDefinition = 3, 
		RULE_nodeDefinition = 4, RULE_transitionDefinition = 5, RULE_transition = 6, 
		RULE_firstNode = 7, RULE_secondNode = 8, RULE_expression = 9, RULE_booleanExpression = 10, 
		RULE_arithmeticExpression = 11, RULE_term = 12, RULE_factor = 13, RULE_expressionAtom = 14, 
		RULE_dataTypes = 15, RULE_memoryType = 16, RULE_tupleType = 17, RULE_listType = 18, 
		RULE_nodeDefTypes = 19, RULE_graphCall = 20, RULE_afterAcceptDefinition = 21, 
		RULE_afterRejectDefinition = 22, RULE_arithmeticOperator = 23, RULE_boolOperator = 24, 
		RULE_literals = 25, RULE_var = 26, RULE_booleanLiteral = 27, RULE_stringLiteral = 28, 
		RULE_charLiteral = 29, RULE_integerLiteral = 30, RULE_digit = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "graphDef", "graphBody", "memoryDefinition", "nodeDefinition", "transitionDefinition", 
			"transition", "firstNode", "secondNode", "expression", "booleanExpression", 
			"arithmeticExpression", "term", "factor", "expressionAtom", "dataTypes", 
			"memoryType", "tupleType", "listType", "nodeDefTypes", "graphCall", "afterAcceptDefinition", 
			"afterRejectDefinition", "arithmeticOperator", "boolOperator", "literals", 
			"var", "booleanLiteral", "stringLiteral", "charLiteral", "integerLiteral", 
			"digit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'operator'", "'transitions'", "'graph'", "'memory'", "'afterReject'", 
			"'afterAccept'", "'symbols'", "'array'", "'dict'", "'tuple'", "'conditions'", 
			"'operations'", "'None'", "'nodeDef'", "'startNode'", "'acceptNode'", 
			"'rejectNode'", "'->'", "'=>'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", null, null, "'~'", null, "'='", "'<'", 
			"'>'", "'=='", "'!='", "'<='", "'>='", "';'", "'::'", "':'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Operator", "Transitions", "Graph", "Memory", "AfterReject", "AfterAccept", 
			"Symbols", "Array", "Dict", "Tuple", "Conditions", "Operations", "None", 
			"NodeDef", "StartNode", "AcceptNode", "RejectNode", "Arrow", "ArrowEquals", 
			"LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
			"RightBrace", "Plus", "Minus", "Star", "Div", "Mod", "And", "Or", "Tilde", 
			"Not", "Assign", "Less", "Greater", "Equal", "NotEqual", "LessEqual", 
			"GreaterEqual", "Semicolon", "DoubleColon", "Colon", "Comma", "BooleanLiteral", 
			"StringLiteral", "CharLiteral", "IntegerLiteral", "Digit", "IDENTIFIER", 
			"Whitespace", "Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AUTOMAParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AUTOMAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RContext extends ParserRuleContext {
		public List<GraphDefContext> graphDef() {
			return getRuleContexts(GraphDefContext.class);
		}
		public GraphDefContext graphDef(int i) {
			return getRuleContext(GraphDefContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Graph) {
				{
				{
				setState(64);
				graphDef();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraphDefContext extends ParserRuleContext {
		public TerminalNode Graph() { return getToken(AUTOMAParser.Graph, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AUTOMAParser.IDENTIFIER, 0); }
		public TerminalNode LeftBrace() { return getToken(AUTOMAParser.LeftBrace, 0); }
		public GraphBodyContext graphBody() {
			return getRuleContext(GraphBodyContext.class,0);
		}
		public TerminalNode RightBrace() { return getToken(AUTOMAParser.RightBrace, 0); }
		public GraphDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphDef; }
	}

	public final GraphDefContext graphDef() throws RecognitionException {
		GraphDefContext _localctx = new GraphDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_graphDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(Graph);
			setState(71);
			match(IDENTIFIER);
			setState(72);
			match(LeftBrace);
			setState(73);
			graphBody();
			setState(74);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraphBodyContext extends ParserRuleContext {
		public MemoryDefinitionContext memoryDefinition() {
			return getRuleContext(MemoryDefinitionContext.class,0);
		}
		public NodeDefinitionContext nodeDefinition() {
			return getRuleContext(NodeDefinitionContext.class,0);
		}
		public TransitionDefinitionContext transitionDefinition() {
			return getRuleContext(TransitionDefinitionContext.class,0);
		}
		public List<AfterAcceptDefinitionContext> afterAcceptDefinition() {
			return getRuleContexts(AfterAcceptDefinitionContext.class);
		}
		public AfterAcceptDefinitionContext afterAcceptDefinition(int i) {
			return getRuleContext(AfterAcceptDefinitionContext.class,i);
		}
		public List<AfterRejectDefinitionContext> afterRejectDefinition() {
			return getRuleContexts(AfterRejectDefinitionContext.class);
		}
		public AfterRejectDefinitionContext afterRejectDefinition(int i) {
			return getRuleContext(AfterRejectDefinitionContext.class,i);
		}
		public GraphBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphBody; }
	}

	public final GraphBodyContext graphBody() throws RecognitionException {
		GraphBodyContext _localctx = new GraphBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_graphBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			memoryDefinition();
			setState(77);
			nodeDefinition();
			setState(78);
			transitionDefinition();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AfterAccept) {
				{
				{
				setState(79);
				afterAcceptDefinition();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AfterReject) {
				{
				{
				setState(85);
				afterRejectDefinition();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemoryDefinitionContext extends ParserRuleContext {
		public TerminalNode Memory() { return getToken(AUTOMAParser.Memory, 0); }
		public TerminalNode LeftBrace() { return getToken(AUTOMAParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(AUTOMAParser.RightBrace, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AUTOMAParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AUTOMAParser.IDENTIFIER, i);
		}
		public List<TerminalNode> Colon() { return getTokens(AUTOMAParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(AUTOMAParser.Colon, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AUTOMAParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AUTOMAParser.Comma, i);
		}
		public MemoryDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memoryDefinition; }
	}

	public final MemoryDefinitionContext memoryDefinition() throws RecognitionException {
		MemoryDefinitionContext _localctx = new MemoryDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_memoryDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(Memory);
			setState(92);
			match(LeftBrace);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(93);
				match(IDENTIFIER);
				setState(94);
				match(Colon);
				setState(95);
				expression();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(96);
					match(Comma);
					setState(97);
					match(IDENTIFIER);
					setState(98);
					match(Colon);
					setState(99);
					expression();
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(107);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeDefinitionContext extends ParserRuleContext {
		public TerminalNode NodeDef() { return getToken(AUTOMAParser.NodeDef, 0); }
		public TerminalNode LeftBrace() { return getToken(AUTOMAParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(AUTOMAParser.RightBrace, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AUTOMAParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AUTOMAParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DoubleColon() { return getTokens(AUTOMAParser.DoubleColon); }
		public TerminalNode DoubleColon(int i) {
			return getToken(AUTOMAParser.DoubleColon, i);
		}
		public List<NodeDefTypesContext> nodeDefTypes() {
			return getRuleContexts(NodeDefTypesContext.class);
		}
		public NodeDefTypesContext nodeDefTypes(int i) {
			return getRuleContext(NodeDefTypesContext.class,i);
		}
		public List<TerminalNode> Semicolon() { return getTokens(AUTOMAParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(AUTOMAParser.Semicolon, i);
		}
		public NodeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeDefinition; }
	}

	public final NodeDefinitionContext nodeDefinition() throws RecognitionException {
		NodeDefinitionContext _localctx = new NodeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nodeDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(NodeDef);
			setState(110);
			match(LeftBrace);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(111);
				match(IDENTIFIER);
				setState(112);
				match(DoubleColon);
				setState(113);
				nodeDefTypes();
				setState(114);
				match(Semicolon);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
					{
					setState(115);
					match(IDENTIFIER);
					setState(116);
					match(DoubleColon);
					setState(117);
					nodeDefTypes();
					setState(118);
					match(Semicolon);
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(127);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransitionDefinitionContext extends ParserRuleContext {
		public TerminalNode Transitions() { return getToken(AUTOMAParser.Transitions, 0); }
		public TerminalNode LeftBrace() { return getToken(AUTOMAParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(AUTOMAParser.RightBrace, 0); }
		public List<TransitionContext> transition() {
			return getRuleContexts(TransitionContext.class);
		}
		public TransitionContext transition(int i) {
			return getRuleContext(TransitionContext.class,i);
		}
		public TransitionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transitionDefinition; }
	}

	public final TransitionDefinitionContext transitionDefinition() throws RecognitionException {
		TransitionDefinitionContext _localctx = new TransitionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_transitionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(Transitions);
			setState(130);
			match(LeftBrace);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				transition();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(136);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransitionContext extends ParserRuleContext {
		public FirstNodeContext firstNode() {
			return getRuleContext(FirstNodeContext.class,0);
		}
		public SecondNodeContext secondNode() {
			return getRuleContext(SecondNodeContext.class,0);
		}
		public TerminalNode ArrowEquals() { return getToken(AUTOMAParser.ArrowEquals, 0); }
		public TerminalNode Conditions() { return getToken(AUTOMAParser.Conditions, 0); }
		public List<TerminalNode> Colon() { return getTokens(AUTOMAParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(AUTOMAParser.Colon, i);
		}
		public List<TupleTypeContext> tupleType() {
			return getRuleContexts(TupleTypeContext.class);
		}
		public TupleTypeContext tupleType(int i) {
			return getRuleContext(TupleTypeContext.class,i);
		}
		public TerminalNode Comma() { return getToken(AUTOMAParser.Comma, 0); }
		public TerminalNode Operations() { return getToken(AUTOMAParser.Operations, 0); }
		public TerminalNode Semicolon() { return getToken(AUTOMAParser.Semicolon, 0); }
		public TransitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition; }
	}

	public final TransitionContext transition() throws RecognitionException {
		TransitionContext _localctx = new TransitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_transition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			firstNode();
			setState(139);
			secondNode();
			setState(140);
			match(ArrowEquals);
			setState(141);
			match(Conditions);
			setState(142);
			match(Colon);
			setState(143);
			tupleType();
			setState(144);
			match(Comma);
			setState(145);
			match(Operations);
			setState(146);
			match(Colon);
			setState(147);
			tupleType();
			setState(148);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FirstNodeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AUTOMAParser.IDENTIFIER, 0); }
		public FirstNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstNode; }
	}

	public final FirstNodeContext firstNode() throws RecognitionException {
		FirstNodeContext _localctx = new FirstNodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_firstNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondNodeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AUTOMAParser.IDENTIFIER, 0); }
		public SecondNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondNode; }
	}

	public final SecondNodeContext secondNode() throws RecognitionException {
		SecondNodeContext _localctx = new SecondNodeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_secondNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public List<TerminalNode> Not() { return getTokens(AUTOMAParser.Not); }
		public TerminalNode Not(int i) {
			return getToken(AUTOMAParser.Not, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Not) {
				{
				{
				setState(154);
				match(Not);
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			booleanExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanExpressionContext extends ParserRuleContext {
		public List<ArithmeticExpressionContext> arithmeticExpression() {
			return getRuleContexts(ArithmeticExpressionContext.class);
		}
		public ArithmeticExpressionContext arithmeticExpression(int i) {
			return getRuleContext(ArithmeticExpressionContext.class,i);
		}
		public List<BoolOperatorContext> boolOperator() {
			return getRuleContexts(BoolOperatorContext.class);
		}
		public BoolOperatorContext boolOperator(int i) {
			return getRuleContext(BoolOperatorContext.class,i);
		}
		public BooleanExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExpression; }
	}

	public final BooleanExpressionContext booleanExpression() throws RecognitionException {
		BooleanExpressionContext _localctx = new BooleanExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_booleanExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			arithmeticExpression();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281320357888L) != 0)) {
				{
				{
				setState(163);
				boolOperator();
				setState(164);
				arithmeticExpression();
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithmeticExpressionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> Plus() { return getTokens(AUTOMAParser.Plus); }
		public TerminalNode Plus(int i) {
			return getToken(AUTOMAParser.Plus, i);
		}
		public List<TerminalNode> Minus() { return getTokens(AUTOMAParser.Minus); }
		public TerminalNode Minus(int i) {
			return getToken(AUTOMAParser.Minus, i);
		}
		public ArithmeticExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticExpression; }
	}

	public final ArithmeticExpressionContext arithmeticExpression() throws RecognitionException {
		ArithmeticExpressionContext _localctx = new ArithmeticExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arithmeticExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			term();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Plus || _la==Minus) {
				{
				{
				setState(172);
				_la = _input.LA(1);
				if ( !(_la==Plus || _la==Minus) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(173);
				term();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> Star() { return getTokens(AUTOMAParser.Star); }
		public TerminalNode Star(int i) {
			return getToken(AUTOMAParser.Star, i);
		}
		public List<TerminalNode> Div() { return getTokens(AUTOMAParser.Div); }
		public TerminalNode Div(int i) {
			return getToken(AUTOMAParser.Div, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			factor();
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Star || _la==Div) {
				{
				{
				setState(180);
				_la = _input.LA(1);
				if ( !(_la==Star || _la==Div) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(181);
				factor();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FactorContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(AUTOMAParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(AUTOMAParser.RightParen, 0); }
		public ExpressionAtomContext expressionAtom() {
			return getRuleContext(ExpressionAtomContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_factor);
		try {
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				match(LeftParen);
				setState(188);
				expression();
				setState(189);
				match(RightParen);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				expressionAtom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionAtomContext extends ParserRuleContext {
		public GraphCallContext graphCall() {
			return getRuleContext(GraphCallContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public LiteralsContext literals() {
			return getRuleContext(LiteralsContext.class,0);
		}
		public DataTypesContext dataTypes() {
			return getRuleContext(DataTypesContext.class,0);
		}
		public ExpressionAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionAtom; }
	}
